Fix alignment (again)

--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,8 @@ ul {
   border-top-color:#130f30 !important;
 }
 
-
 .intro-header {
-  margin-top: 20%;
+  margin: auto 0 0;
   font-family: "Rubik", sans-serif;
   font-weight: 900;
   text-transform: uppercase;
@@ -122,6 +121,12 @@ ul {
     justify-content: center; /* Optional, to align inner flex-items
                               horizontally within the column  */
   }
+
+  .timeline {
+    font-family: "Rubik", sans-serif;
+    font-weight: 500;
+    text-align: left;
+  }
 }
 
 @media (min-width: 768px) {
@@ -139,6 +144,12 @@ ul {
   .vertical-align > [class*=" col-"] {
     display: flex;
     align-items: center; /* Align the flex-items vertically */
+  }
+
+  .timeline {
+    font-family: "Rubik", sans-serif;
+    font-weight: 500;
+    text-align: right;
   }
 }
 
@@ -281,7 +292,7 @@ div .section {
 
 #main {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   flex-direction: column;
 }
 
@@ -388,12 +399,6 @@ div .course_cat_label {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
   text-align: left;
-}
-
-.timeline {
-  font-family: "Rubik", sans-serif;
-  font-weight: 500;
-  text-align: right;
 }
 
 
